--- a/Proyecto/Back/docker-compose.yml
+++ b/Proyecto/Back/docker-compose.yml
@@ -43,4 +43,4 @@ services:
     depends_on:
       - db
     #Quan es crea, es poden executar ordres
-    command: bash -c "composer install && php artisan key:generate && php artisan serve --host=0.0.0.0"
+    command: bash -c "composer install && cp ./.env.example ./.env && php artisan key:generate && php artisan serve --host=0.0.0.0"
