--- a/Proyecto/Back/docker-compose.yml
+++ b/Proyecto/Back/docker-compose.yml
@@ -1,10 +1,6 @@
+version: '3'
+
 services:
-  # Base de dades MySQL (db)
-  # anomeneu-la com vulgueu, però recordeu que ha de coincidir amb el nom
-  # que poseu a la configuració de la connexió de l'aplicació (i el depends_on de l'adminer)
-  # Crearà una carpeta "./mysql_data" on guardarà les dades de la base de dades
-  # Si esborreu la carpeta, la BBDD estarà buida i podreu començar des de 0 
-  # També crearà una BBBDD "botiga" pq. la imatge de mysql executa els fitxers
   # que hi hagi a la carpeta "docker-entrypoint-initdb.d" al primer inici
   db:
     image: mysql:8.2.0
